# Fudo

./: .gitignore  LICENSE  README.md  fudo-hook.sh  fudo.fish  fudoo.fish  fudos-hook.sh  fudos.fish  index.html  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
